se resuelven los meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="descripcion" content="Annies Bakery es un sitio que ofrece tartas clasicas y bundtcakes artesanales que se preparan a pedido">
+    <meta name="description" content="Annies Bakery es un sitio que ofrece tartas clasicas y bundtcakes artesanales que se preparan a pedido">
     <meta name="keywords" content="annies bakery, tartas, bundtcakes">
 
     <!-- link bootstrap -->
