--- a/pages/bundtcakes.html
+++ b/pages/bundtcakes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="descripcion" content="Pagina en donde se listan los bundtcakes y otras cosas que prepara Annies">
+    <meta name="description" content="Pagina en donde se listan los bundtcakes y otras cosas que prepara Annies">
     <meta name="keywords" content="bundtcake, chocolate blanco, limon y amapolas, alfajorcitos de maicena, cookies">
 
     <!-- link bootstrap -->
