--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="descripcion" content="Pagina en donde podes contactar a Annies para realizar consultas o pedidos">
+    <meta name="description" content="Pagina en donde podes contactar a Annies para realizar consultas o pedidos">
     <meta name="keywords" content="redes sociales, contacto, annies bakery">
 
     <!-- link bootstrap -->
