--- a/pages/tartas.html
+++ b/pages/tartas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="descripcion" content="Pagina en donde se listan las tartas que prepara Annies">
+    <meta name="description" content="Pagina en donde se listan las tartas que prepara Annies">
     <meta name="keywords" content="brownie, cheesecake oreo, lemon pie, frutillas, apple crumble">
 
     <!-- link bootstrap -->
