agregado de imagenes y resolucion de mixin

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,6 +70,13 @@
             <p>
                 Les cuento un poquito de mí..., de chiquita me encantaba mirar programas de TV referidos a repostería y jugar por horas en la cocina preparando distintas recetas, me gustaba ayudar a mi mamá en la preparación de todas las tortas de cumpleaños de mi familia, era como un ritual que disfrutaba muchísimo. Luego, por esas vueltas que tiene la vida me dediqué al mundo de sistemas, sin embargo lo que a uno lo hace feliz, siempre prevalece. En el año 2011, siguiendo mi deseo estudié la Carrera de Pastelero Profesional en el @iagastronomia. 
             </p>
+            <!-- imagenes de iconos entre el texto -->
+            <div class="imagenIconos">
+                <img src="../img/icon_cake1.png" alt="icono de imagen 1">
+                <img src="../img/icon_cake2.png" alt="icono de imagen 2">
+                <img src="../img/icon_cake3.png" alt="icono de imagen 3">
+                <img src="../img/icon_cake4.png" alt="icono de imagen 4">
+            </div>
             <p>                
                 Al inicio cocinaba para amigos, familia, compañeros de trabajo ... mientras me perfeccionaba aprendiendo de los mejores pasteleros. Sin querer, o mejor dicho, gracias a las devoluciones de quienes me decían que las tortas les resultaban exquisitas, comencé realizar pastelería a pedido para conocidos y amigos. Esas mismas recomendaciones son las que hasta hoy, siguen siendo mi mejor carta de presentación. Esa soy yo, Annie, una emprendedora con mucha pasión (y obsesiva por cada detalle) que con mucho amor crea pastelería para endulzar momentos en la vida de las personas.
                 Ahora sí! Los invito a conocer lo que hago.
