--- a/index.html
+++ b/index.html
@@ -64,34 +64,43 @@
     </header>
     
     <!-- main con texto de descripcion del sitio + imagenes-->
-    <main class="estiloIndex">
+    <main>
+        <article class="estiloIndex">
             <!-- Titulo bienvenida al sitio -->
             <h1 class="saludoUno">
                 Bienvenid@s a Annie's Bakery
             </h1>
             <!-- carrousel del index -->
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade shadow container-fluid" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/logo_annies_ori.png" class="d-block w-100" alt="logo Annies">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/foto_inicio1.jpg" class="d-block w-100" alt="foto tarta maracuya">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/foto_inicio2.jpg" class="d-block w-100" alt="foto lemon pie">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/foto_inicio3.jpg" class="d-block w-100" alt="foto cheesecake oreo">
+            <section class="carrouselIndex">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade shadow container-fluid" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/foto_inicio1.jpg" class="d-block w-100" alt="foto cheesecake con frutos rojos">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/foto_inicio2.jpg" class="d-block w-100" alt="foto tarta de maracuya">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/foto_inicio3.jpg" class="d-block w-100" alt="foto chocotorta">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/foto_inicio4.jpg" class="d-block w-100" alt="foto tarta de naranja y chocolate">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/foto_inicio5.jpg" class="d-block w-100" alt="cheesecake oreo">
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
+            <!-- promo del mes -->
+            <h2 class="promo"> Promo del mes!!</h2>
+            <img class="promoMes" src="img/promo_mes.jpg" alt="imagen con la promo del mes">
             <!-- parrafo descriptivo -->
-            <p class="parrafoDescriptivo">
+            <h3 class="parrafoDescriptivo">
                 Te invito a recorrer este sitio web donde encontrarás tartas clásicas, bundtcakes y otras cosas que preparo. 
-            </p>
+            </h3>
+        </article>
     </main>
-    
     <!-- footer -->
     <footer class="footerUno">
         <div class="imagenContacto">
